Header info updated, image bug fixed, several code optimizations implemented

--- a/Boozer-Admin (React)/src/components/Header/Header.css
+++ b/Boozer-Admin (React)/src/components/Header/Header.css
@@ -1,1 +1,1 @@
-.Header{height:8vh;background-color:#6C1B1B}
+.Header{height:8vh;background-color:#6c1b1b}.Header .dropdown button{height:8vh;text-align:right;float:right}.Header button{background-color:rgba(105,14,14,0.65) !important;border:none;color:white;font-weight:bold}.Header .dropdown-menu.custom{background-color:#201f1e}.Header .dropdown-menu.custom>.dropdown-item{color:white}.Header .dropdown-menu.custom>.dropdown-item:hover{background-color:#181716}.Header .dropdown-menu.custom>.dropdown-item#disabled{color:gray}
