--- a/Boozer-Admin (React)/src/containers/Login/Login.scss
+++ b/Boozer-Admin (React)/src/containers/Login/Login.scss
@@ -10,9 +10,9 @@
     background-color: rgb(24, 24, 24);
     border-color: rgba(107, 0, 0, 0.75);
     width: 40vw;
-    margin: .5vh auto 3vh;
+    margin: 0.5vh auto 3vh;
   }
-  input:focus{
+  input:focus {
     background-color: rgb(32, 32, 32);
     color: white;
   }
@@ -22,5 +22,10 @@
   }
   button {
     width: 40vw;
+    background-color: rgba(105, 14, 14, 0.65) !important;
+    border: none;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 1vh;
   }
 }
