--- a/Boozer-Admin (React)/src/containers/Login/Login.scss
+++ b/Boozer-Admin (React)/src/containers/Login/Login.scss
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+
 .Login {
   color: white;
   text-align: center;
   font-size: 1.25em;
   max-width: 100%;
   overflow-x: hidden;
+  h1 {
+    margin: 2.5vh auto;
+    font-family: 'Concert One', cursive;
+  }
   input {
     margin: auto;
     color: white;
@@ -15,6 +21,8 @@
   input:focus {
     background-color: rgb(32, 32, 32);
     color: white;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(83, 0, 0, 0.75);
+    border-color: rgba(107, 0, 0, 0.75);
   }
   label {
     margin: 0.75vh 0;
