filter implemented, new fragment, favorites, added, several bugs fixed

--- a/Boozer (Android Studio)/app/src/main/res/layout/fragment_catalogue.xml
+++ b/Boozer (Android Studio)/app/src/main/res/layout/fragment_catalogue.xml
@@ -18,13 +18,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--Adjust search button-->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnFilter"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="82dp"
+        app:icon="@drawable/adjust"
+        app:iconSize="25dp"
+        app:iconTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/drinksCatalogue"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btnFilter"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="90dp"/>
 
 </FrameLayout>
