--- a/Boozer (Android Studio)/app/src/main/res/values/colors.xml
+++ b/Boozer (Android Studio)/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="black">#000000</color>
     <color name="favorite">#FFB100</color>
     <color name="disabled">#464646</color>
+    <color name="actionBar">#80201F1E</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:ignore="PrivateResource">#201f1e</color>
 </resources>
