--- a/Boozer (Android Studio)/app/src/main/res/layout/activity_drink.xml
+++ b/Boozer (Android Studio)/app/src/main/res/layout/activity_drink.xml
@@ -45,6 +45,9 @@
         android:paddingTop="10dp"
         android:textColor="@color/white"
         android:textSize="40sp"
+        android:textAlignment="center"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/drinkImage" />
@@ -92,7 +95,10 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/drinkPrice" />
